<resources>
    <string name="app_name">Easy Yoga</string>
    <string name="hello_user">Hello User</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <string name="workouts">Workouts</string>
    <string name="calories">Calories</string>
    <string name="duration">Duration</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="_00_00">00:00</string>
    <string name="week">Week</string>
    <string name="no_record_found">No record found</string>
    <string name="next">Next</string>
    <string name="signIn">SignIn</string>
    <string name="weight">Weight</string>
    <string name="_50">50</string>
    <string name="kg">Kg</string>
    <string name="height">Height</string>
    <string name="_5_7">5.7</string>
    <string name="ft_in">ft in</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="in">in</string>
    <string name="ft">ft</string>
    <string name="save">Save</string>
    <string name="exercise_name">Exercise name</string>
    <string name="min">min</string>
    <string name="your_body_and_muscles_need_to_get_some_rest">Your body and muscles need to get some rest</string>
    <string name="rest">Rest</string>
    <string name="feets">Feets</string>
    <string name="inches">Inches</string>
    <string name="bmi">BMI:</string>
    <string name="bmitext">bmitext</string>
    <string name="_1">0</string>
    <string name="sun">Sun</string>
    <string name="day">Day</string>
    <string name="plans">Plans</string>
    <string name="duration2">Duration</string>
    <string name="cal">Kcal</string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_daily_calories_goal">Enter your daily calories goal</string>
    <string name="enter_your_weight_and_height">Enter your Weight and height</string>
    <string name="all_done">All Done</string>
    <string name="sign_out">Sign out</string>
    <string name="unit">unit</string>
    <string name="title">Title</string>
    <string name="hint">hint</string>
    <string name="daily_goals">Daily goals</string>
    <string name="weight_amp_height"><![CDATA[Weight & Height]]></string>
    <string name="daily_report">Daily report</string>
    <string name="kg_m_u00b2">Kg/m²</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hi">Hi</string>
    <string name="your_name">your name</string>
    <string name="welcome_to_easy_yoga">Welcome to Easy yoga</string>
    <string name="benefits">Benefits</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_read_more">read more</string>
    <string name="out_of">out of</string>
</resources>