<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:layout_marginVertical="10dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:hint="@string/enter_your_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameDialogEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/maleBtn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/male"
            android:backgroundTint="@color/black"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/femaleBtn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/female"
            android:textSize="15sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nameDialogSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_margin="10dp"
        android:text="@string/save" />

</LinearLayout>