<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_background">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:backgroundTint="@color/white"
            android:minWidth="175dp"
            android:minHeight="175dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="25dp"
            app:cardMaxElevation="50dp"
            app:cardPreventCornerOverlap="true"
            app:strokeColor="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:minWidth="175dp"
                android:minHeight="175dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_person_24"
                android:tint="@color/level_color"
                tools:ignore="UseAppTint" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/signIn"
            android:textColor="@color/dark_gray"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/hello_user"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/gray"
        app:cardElevation="5dp"
        app:cardMaxElevation="2dp"
        app:strokeColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:minWidth="40dp"
                android:minHeight="40dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:strokeColor="@color/white">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/weight" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="4"
                android:padding="5dp"
                android:text="@string/weight"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/weightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="5dp"
                android:text="@string/_50"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="5dp"
                android:text="@string/kg"
                android:textSize="22sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/weightEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:minWidth="40dp"
                android:minHeight="40dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:strokeColor="@color/white">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_edit_24" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/gray"
        app:cardElevation="5dp"
        app:cardMaxElevation="2dp"
        app:strokeColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:minWidth="40dp"
                android:minHeight="40dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:strokeColor="@color/white">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_height_24" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="4"
                android:padding="5dp"
                android:text="@string/height"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/feetText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="5dp"
                android:text="@string/_5"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="5dp"
                android:text="@string/ft"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/inchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="5dp"
                android:text="@string/_7"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="5dp"
                android:text="@string/in"
                android:textSize="22sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/heightEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:minWidth="40dp"
                android:minHeight="40dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:strokeColor="@color/white">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_edit_24" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>