<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:backgroundTint="@color/gray"
    app:cardElevation="5dp"
    app:cardMaxElevation="7dp"
    app:strokeColor="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardMaxElevation="7dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:strokeColor="@android:color/transparent">

            <ImageView
                android:id="@+id/exerciseImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:scaleType="centerCrop" />

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/exerciseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exerciseDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/duration"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>